sample json response parsing done

--- a/app/src/main/res/layout/earthquake_list_item.xml
+++ b/app/src/main/res/layout/earthquake_list_item.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="12dp"
         style="@style/CategoryStyle"/>
     <TextView
-        android:id="@+id/place_text_view"
+        android:id="@+id/location_text_view"
         android:layout_height="match_parent"
         android:layout_width="0dp"
         android:layout_weight="1"
