split location into 2 textViews

--- a/app/src/main/res/layout/earthquake_list_item.xml
+++ b/app/src/main/res/layout/earthquake_list_item.xml
@@ -12,11 +12,17 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="1"
-
         android:text="7.2"
         />
     <TextView
-        android:id="@+id/location_text_view"
+        android:id="@+id/offset_text_view"
+        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:text="Near the"
+        />
+    <TextView
+        android:id="@+id/primary_location_text_view"
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="1"
